src/test/ui/issues/issue-67039-unsound-pin-partialeq.stderr
error[E0271]: type mismatch resolving `<Rc<Apple> as Deref>::Target == Rc<Apple>`
  --> $DIR/issue-67039-unsound-pin-partialeq.rs:25:29
   |
LL |     let _ = Pin::new(Apple) == Rc::pin(Apple);
   |                             ^^ expected struct `Apple`, found struct `Rc`
   |
   = note: expected struct `Apple`
              found struct `Rc<Apple>`
   = note: required because of the requirements on the impl of `PartialEq<Pin<Rc<Apple>>>` for `Pin<Apple>`

error[E0369]: can't compare `Pin<Apple>` with `Pin<Rc<Apple>>`
  --> $DIR/issue-67039-unsound-pin-partialeq.rs:25:29
   |
LL |     let _ = Pin::new(Apple) == Rc::pin(Apple);
   |             --------------- ^^ -------------- Pin<Rc<Apple>>
   |             |
   |             Pin<Apple>
   |
note: an implementation of `PartialEq` might be missing for `Apple`
  --> $DIR/issue-67039-unsound-pin-partialeq.rs:9:1
   |
LL | struct Apple;
   | ^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `Apple` with `#[derive(PartialEq)]`
   |
LL | #[derive(PartialEq)]
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0271, E0369.
For more information about an error, try `rustc --explain E0271`.
